--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -12,7 +12,7 @@ resources.frontController.params.displayExceptions = 0
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.view[] =
 resources.db.adapter = "pdo_mysql"
-resources.db.params.host = "localhost"
+resources.db.params.host = "192.168.100.132"
 resources.db.params.username = "root"
 resources.db.params.password = "password"
 resources.db.params.dbname = "dbtappnew"
@@ -25,7 +25,7 @@ resources.db.isDefaultTableAdapter = true
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 resources.db.adapter = "pdo_mysql"
-resources.db.params.host = "localhost"
+resources.db.params.host = "192.168.100.132"
 resources.db.params.username = "root"
 resources.db.params.password = "password"
 resources.db.params.dbname = "dbtappnew"
@@ -37,7 +37,7 @@ phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 resources.frontController.params.displayExceptions = 1
 resources.db.adapter = "pdo_mysql"
-resources.db.params.host = "localhost"
+resources.db.params.host = "192.168.100.132"
 resources.db.params.username = "root"
 resources.db.params.password = "password"
 resources.db.params.dbname = "dbtappnew"
